Changed arrow font family to Zapf dingbats to fix issue on ios

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -71,6 +71,7 @@ h1 {
   font-style: normal !important;
   position: relative;
   left: -8px;
+  font-family: "Zapf Dingbats";
 }
 
 .container {
